log
Thu Apr 21 17:11:49 UTC 2022: 
 treemap.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
4f88c07
Thu Apr 21 17:22:56 UTC 2022: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:7: error: incompatible types when assigning to type ‘TreeNode {aka struct TreeNode}’ from type ‘TreeNode * {aka struct TreeNode *}’
   aux = tree->root;
       ^
treemap.c:86:9: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
   if(aux->key == key)
         ^~
treemap.c:87:15: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     return aux->key;
               ^~
treemap.c:90:11: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
     if(aux->key > key)
           ^~
treemap.c:91:17: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
       return aux->right;
                 ^~
treemap.c:93:19: error: invalid type argument of ‘->’ (have ‘TreeNode {aka struct TreeNode}’)
         return aux->left;
                   ^~
Compilation failed
d1b51c8
Thu Apr 21 17:23:15 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:9: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
   if(aux->key == key)
         ^~
treemap.c:87:15: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     return aux->key;
               ^~
treemap.c:90:11: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘key’
     if(aux->key > key)
           ^~
treemap.c:91:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
       return aux->right;
              ~~~^~~~~~~
treemap.c:93:19: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return aux->left;
                ~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
62bf418
Thu Apr 21 17:25:53 UTC 2022: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:9: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
   if(aux->root->pair == key)
         ^~
treemap.c:87:15: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
     return aux->root->pair;
               ^~
treemap.c:90:25: error: comparison of distinct pointer types lacks a cast [-Werror]
     if(aux->right->pair > key)
                         ^
cc1: all warnings being treated as errors
Compilation failed
687a320
Thu Apr 21 17:31:27 UTC 2022: 
 treemap.c | 20 ++++++++++++++------
 1 file changed, 14 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:13: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘left’
   while(tree->left != NULL || tree->right != NULL)
             ^~
treemap.c:86:35: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘right’
   while(tree->left != NULL || tree->right != NULL)
                                   ^~
treemap.c:92:5: error: expected ‘;’ before ‘}’ token
     }
     ^
treemap.c:99:7: error: expected ‘;’ before ‘}’ token
       }
       ^
Compilation failed
03b571a
Thu Apr 21 17:32:06 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:13: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘left’
   while(tree->left != NULL || tree->right != NULL)
             ^~
treemap.c:86:35: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘right’
   while(tree->left != NULL || tree->right != NULL)
                                   ^~
Compilation failed
0971391
Thu Apr 21 17:34:27 UTC 2022: 
 treemap.c | 17 -----------------
 1 file changed, 17 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:83:13: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   TreeNode* aux;
             ^~~
cc1: all warnings being treated as errors
Compilation failed
52da7e3
Thu Apr 21 17:34:46 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
89f44db
